--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,8 +5,7 @@ Authors@R:
     person("Lee", "Przybylski", , "przybylskily@gmail.com", role = c("aut", "cre"),
            )
 Description: We provide functions for scraping NFL scores from profootball reference.com and fit regression models to predict results of future games.
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
