Add GitHub links to DESCRIPTION

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,3 +13,5 @@ Imports:
     dplyr,
     readr,
     rvest
+URL: https://github.com/przybylee/NFLpredictions
+BugReports: https://github.com/przybylee/NFLpredictions/issues
