Added documentation for spreadprob_ols

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,5 +4,6 @@ export(XY_differences)
 export(conf_int_ols)
 export(point_spread_ols)
 export(scrape_games)
+export(spreadprob_ols)
 export(winprob_ols)
 import(dplyr)
