--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,3 +17,6 @@ Imports:
     stats
 URL: https://github.com/przybylee/NFLpredictions
 BugReports: https://github.com/przybylee/NFLpredictions/issues
+Depends: 
+    R (>= 2.10)
+LazyData: true
