Added documentation eSpread

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,12 @@ export(XY_differences)
 export(american_to_odds)
 export(conf_int_ols)
 export(eML_ols)
+export(eSpread_ols)
 export(point_spread_ols)
 export(scrape_games)
 export(spreadprob_ols)
 export(winprob_ols)
-import(dplyr)
+importFrom(magrittr,"%>%")
+importFrom(stats,anova)
+importFrom(stats,lm)
+importFrom(stats,pnorm)
