Added get_design function to replace XY_differences

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(american_to_odds)
 export(conf_int_ols)
 export(eML_ols)
 export(eSpread_ols)
+export(get_design)
 export(point_spread_ols)
 export(scrape_games)
 export(spreadprob_ols)
