--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,9 +6,11 @@ export(conf_int_ols)
 export(eML_ols)
 export(eSpread_ols)
 export(get_design)
+export(over_under_ols)
 export(point_spread_ols)
 export(scrape_games)
 export(spreadprob_ols)
+export(team_detect)
 export(winprob_ols)
 importFrom(magrittr,"%>%")
 importFrom(stats,anova)
