Added winprob_emp function with documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(point_spread_ols)
 export(scrape_games)
 export(spreadprob_ols)
 export(team_detect)
+export(winprob_emp)
 export(winprob_ols)
 importFrom(magrittr,"%>%")
 importFrom(stats,anova)
