Updated winprob functions for new designs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(get_design)
 export(over_under_ols)
 export(point_spread_ols)
 export(scrape_games)
+export(spreadprob_normal)
 export(spreadprob_ols)
 export(team_detect)
 export(winprob_emp)
