Updated spreadprob documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,8 +11,8 @@ export(get_design)
 export(over_under_ols)
 export(point_spread_ols)
 export(scrape_games)
+export(spreadprob_emp)
 export(spreadprob_normal)
-export(spreadprob_ols)
 export(team_detect)
 export(winprob_emp)
 export(winprob_ols)
