updated espread functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,7 @@ export(conf_int_ols)
 export(drop_incomplete_games)
 export(eML_emp)
 export(eML_ols)
-export(eSpread_ols)
+export(espread_normal)
 export(get_design)
 export(over_under_ols)
 export(point_spread_ols)
