Updated eML functions for consistency with espread

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,7 @@ export(american_to_odds)
 export(conf_int_ols)
 export(drop_incomplete_games)
 export(eML_emp)
-export(eML_ols)
+export(eML_normal)
 export(espread_emp)
 export(espread_normal)
 export(get_design)
@@ -16,7 +16,7 @@ export(spreadprob_emp)
 export(spreadprob_normal)
 export(team_detect)
 export(winprob_emp)
-export(winprob_ols)
+export(winprob_normal)
 importFrom(magrittr,"%>%")
 importFrom(stats,anova)
 importFrom(stats,lm)
