Work on estimating with GLM

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(eML_normal)
 export(espread_emp)
 export(espread_normal)
 export(get_design)
+export(logit)
 export(over_under_ols)
 export(point_spread_ols)
 export(scrape_games)
