--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(spreadprob_normal)
 export(team_detect)
 export(winprob_emp)
 export(winprob_normal)
+import(dplyr)
 importFrom(magrittr,"%>%")
 importFrom(stats,anova)
 importFrom(stats,lm)
