Added win probs using logistic function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(eML_normal)
 export(espread_emp)
 export(espread_normal)
 export(get_design)
+export(logistic)
 export(logit)
 export(over_under_ols)
 export(point_spread_ols)
@@ -17,6 +18,7 @@ export(spreadprob_emp)
 export(spreadprob_normal)
 export(team_detect)
 export(winprob_emp)
+export(winprob_logistic)
 export(winprob_normal)
 import(dplyr)
 importFrom(magrittr,"%>%")
