Added function for pivot games and started win prob validation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(get_design)
 export(logistic)
 export(logit)
 export(over_under_ols)
+export(pivot_games_wide)
 export(point_spread_ols)
 export(scrape_games)
 export(spreadprob_emp)
