--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,12 +2,14 @@
 
 export(XY_differences)
 export(american_to_odds)
+export(american_to_prob)
 export(conf_int_ols)
 export(drop_incomplete_games)
 export(eML_emp)
 export(eML_normal)
 export(espread_emp)
 export(espread_normal)
+export(games_wide_to_design)
 export(get_design)
 export(logistic)
 export(logit)
